# movie-rag

./: .env.example  .gitignore  README.md  pyproject.toml
assets/: benchmark_detail.csv  benchmark_detail_english_only.csv  benchmark_detail_hindi_english.csv  benchmark_summary.csv  benchmark_summary_english_only.csv  benchmark_summary_hindi_english.csv  chat_history.csv  chat_suggestions.csv  eda_summary.csv  failures.csv  failures_english_only.csv  failures_hindi_english.csv
data/: english_test_prompts.json  hindi_test_prompts.json  test+prompts.json  test_prompts.json
src/: agent.py  config.py  dashboard.py  eda.py  embed.py  evaluation.py  generate_test_prompts.py  llm.py  main.py  preprocess.py  scrape.py  similarity_search.py  tool_call.py
